--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Projet - M2 Génie Logiciel - Université de Bordeaux",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "node config/scripts/postinstall.js",
+    "start" :"node serveur/app.js"
+
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/deuxbergersallemands/web-dev"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +20,16 @@
     "md5": "^2.0.0",
     "mongodb": "^2.0.48",
     "angular": "^1.2.16",
-    "angular-route": "^1.2.16"
+    "angular-route": "^1.2.16",
+    "connect": "2.x",
+    "errorhandler": "^1.4.2",
+    "method-override": "^2.3.5",
+    "ejs": ">= 0.5.0",
+    "jade": ">= 1.11.0",
+    "mongoose":">= 2.3.1"
+
+
+
+
    }
 }
