modification de serveur

--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "main": "app.js",
   "scripts": {
     "postinstall": "node config/scripts/postinstall.js",
-    "start" :"node serveur/app.js"
-
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/deuxbergersallemands/web-dev"
+    "url": "git+https://github.com/deuxbergersallemands/web-dev.git"
   },
   "author": "",
   "license": "ISC",
@@ -26,10 +25,17 @@
     "method-override": "^2.3.5",
     "ejs": ">= 0.5.0",
     "jade": ">= 1.11.0",
-    "mongoose":">= 2.3.1"
-
-
-
-
-   }
+    "mongoose": ">= 2.3.1"
+  },
+  "gitHead": "141dd437233b96f558d2d7fb9720737de39dac67",
+  "readme": "\r\n\r\n\r\nnpm install \t\t#demarrer l'application\r\nnpm start \t\t\t#connacter à la base de données mongoDB sur localhost:27017/\r\n\t\t\t\t\t#demarrer l'application sur localhost:3000/\r\n\t\t\t\t\t",
+  "readmeFilename": "README.md",
+  "bugs": {
+    "url": "https://github.com/deuxbergersallemands/web-dev/issues"
+  },
+  "homepage": "https://github.com/deuxbergersallemands/web-dev#readme",
+  "_id": "splitwise-rest@1.0.0",
+  "_shasum": "9c31241fe649f7df3efadb62aca63ae849511d9f",
+  "_from": "git+https://github.com/deuxbergersallemands/web-dev.git",
+  "_resolved": "git+https://github.com/deuxbergersallemands/web-dev.git#141dd437233b96f558d2d7fb9720737de39dac67"
 }
