--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser":">= 1.3.3",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "md5": "^2.0.0",
@@ -35,7 +36,7 @@
   },
   "homepage": "https://github.com/deuxbergersallemands/web-dev#readme",
   "_id": "splitwise-rest@1.0.0",
-  "_shasum": "b6c7af55e2b3357b3ef7d343f80e8a248ef7d38b",
+  "_shasum": "4224082f3a47eb082945d8ffefd8ac4548624d9a",
   "_from": "git+https://github.com/deuxbergersallemands/web-dev.git",
-  "_resolved": "git+https://github.com/deuxbergersallemands/web-dev.git#0af99c1a8be2a1788525daea5632f66d715029d2"
+  "_resolved": "git+https://github.com/deuxbergersallemands/web-dev.git#8a2db09d20433d7fa68bc2d1fc5fef9db5357657"
 }
